full fix kak ego tam overflow, really hate this shit

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,7 @@
 
 .header{
   width: 100%;
+  max-width: 1920px;
   padding: 26px 0;
   z-index: 10;
   background: rgba(0, 0, 0);
