--- a/src/components/SwiperHaz/Swiper.scss
+++ b/src/components/SwiperHaz/Swiper.scss
@@ -8,11 +8,12 @@
   }
   
   &__wrapper {
-    height: 100%;
+    height: 700px;
     max-height: 700px;
     overflow: hidden;
     position: sticky;
     top: 0;
+    left: 0;
   }
 
   .phantom {
