--- a/src/main.scss
+++ b/src/main.scss
@@ -27,7 +27,6 @@ html {
 body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
   @include font(14px, 100%, 300);
   position: relative;
 
